opam-version: "2.0"
version: "0.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: [
  "Enguerrand Decorne <decorne.en@gmail.com>"
  "Kate <kit.ty.kate@disroot.org>"
]
homepage: "https://github.com/kit-ty-kate/ocaml-activitypub"
dev-repo: "git://github.com/kit-ty-kate/ocaml-activitypub.git"
bug-reports: "https://github.com/kit-ty-kate/ocaml-activitypub/issues"
synopsis: "An activitypub library for OCaml"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "dune" {build}
]
tags: [
  "activitypub"
]
